# echomimic_v2

./: .gitignore  pyproject.toml
src/: __init__.py
src/models/: __init__.py  mutual_self_attention.py  pose_encoder.py  pose_guider.py
src/pipelines/: __init__.py  pipeline_echomimicv2.py  pipeline_echomimicv2_acc.py
src/utils/: __init__.py  helpers.py
